--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GENAI_KEY= AIzaSyDGIJsxIAdFp39Ylj8wUEa4p36z8vQgnk8
+GENAI_KEY=AIzaSyDGIJsxIAdFp39Ylj8wUEa4p36z8vQgnk8
+FLASK_SECRET_KEY=b8d442308e62b4ce67c1937ba851d46b0058978f3f403a6c
