--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GENAI_KEY=AIzaSyDGIJsxIAdFp39Ylj8wUEa4p36z8vQgnk8
 FLASK_SECRET_KEY=b8d442308e62b4ce67c1937ba851d46b0058978f3f403a6c
+# FLASK_SECRET_KEY=AIzaSyDGiwLdOg_RTr1TdKVS9pembSEIyj9f0Os
